ingreso a de los modelos h390 en la DB y se configura tarjeta contadora de perifericos en el dashboard

--- a/src/views/dashboard/index.hbs
+++ b/src/views/dashboard/index.hbs
@@ -82,23 +82,27 @@
         </div>
       </div>
 
+      {{! tarjeta contenedora del contador de perifericos }}
       <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
         <div class="card">
           <div class="card-body p-3">
             <div class="row">
               <div class="col-8">
                 <div class="numbers">
-                  <p class="text-sm mb-0 text-uppercase font-weight-bold">New
-                    Clients</p>
-                  <h5 class="font-weight-bolder">
-                    +3,462
-                  </h5>
-                  <p class="mb-0">
+                  <p class="text-sm mb-0 text-uppercase font-weight-bold">Conteo
+                    de Perifericos</p>
+                  {{#each gpcount}}
+                    <h6 class="font-weight-bolder">
+                      {{type}}:
+                      {{count_type}}
+                    </h6>
+                  {{/each}}
+                  {{! <p class="mb-0">
                     <span
                       class="text-danger text-sm font-weight-bolder"
                     >-2%</span>
                     since last quarter
-                  </p>
+                  </p> }}
                 </div>
               </div>
               <div class="col-4 text-end">
