--- a/src/views/dashboard/index.hbs
+++ b/src/views/dashboard/index.hbs
@@ -91,12 +91,14 @@
                 <div class="numbers">
                   <p class="text-sm mb-0 text-uppercase font-weight-bold">Conteo
                     de Perifericos</p>
+
                   {{#each gpcount}}
                     <h6 class="font-weight-bolder">
                       {{type}}:
                       {{count_type}}
                     </h6>
                   {{/each}}
+
                   {{! <p class="mb-0">
                     <span
                       class="text-danger text-sm font-weight-bolder"
@@ -119,6 +121,8 @@
           </div>
         </div>
       </div>
+
+      {{! tarjeta contenedora del contador de impresoras }}
       <div class="col-xl-3 col-sm-6">
         <div class="card">
           <div class="card-body p-3">
@@ -127,15 +131,24 @@
                 <div class="numbers">
                   <p
                     class="text-sm mb-0 text-uppercase font-weight-bold"
-                  >Sales</p>
+                  >Impresoras</p>
                   <h5 class="font-weight-bolder">
-                    $103,430
+                    {{#each gprint}}
+                      <h6 class="font-weight-bolder">
+                        {{type}}:
+                        {{count_typep}}
+                      </h6>
+                    {{/each}}
                   </h5>
                   <p class="mb-0">
                     <span
+                      class="text-danger text-sm font-weight-bolder"
+                    >6</span>
+                    impresoras son rentadas.
+                    <span
                       class="text-success text-sm font-weight-bolder"
-                    >+5%</span>
-                    than last month
+                    >22</span>
+                    impresoras son propias.
                   </p>
                 </div>
               </div>
@@ -154,17 +167,18 @@
         </div>
       </div>
     </div>
+
     <div class="row mt-4">
 
       <div class="col-lg-7 mb-lg-0 mb-4 mx-auto">
         <div class="card z-index-2 h-100">
           <div class="card-header pb-0 pt-3 bg-transparent">
-            <h6 class="text-capitalize">Sales overview</h6>
-            <p class="text-sm mb-0">
+            <h6 class="text-capitalize">Vista General de Equipos</h6>
+            {{! <p class="text-sm mb-0">
               <i class="fa fa-arrow-up text-success"></i>
               <span class="font-weight-bold">4% more</span>
               in 2021
-            </p>
+            </p> }}
           </div>
           <div class="card-body p-3">
             <div class="chart">
@@ -426,62 +440,6 @@
         </div>
       </div>
     </div>
-    {{! <footer class="footer pt-3">
-      <div class="container-fluid">
-        <div class="row align-items-center justify-content-lg-between">
-          <div class="col-lg-6 mb-lg-0 mb-4">
-            <div class="copyright text-center text-sm text-muted text-lg-start">
-              ©
-              <script>
-                document.write(new Date().getFullYear())
-              </script>, made with
-              <i class="fa fa-heart"></i>
-              by
-              <a
-                href="https://www.creative-tim.com"
-                class="font-weight-bold"
-                target="_blank"
-              >Creative Tim</a>
-              for a better web.
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <ul
-              class="nav nav-footer justify-content-center justify-content-lg-end"
-            >
-              <li class="nav-item">
-                <a
-                  href="https://www.creative-tim.com"
-                  class="nav-link text-muted"
-                  target="_blank"
-                >Creative Tim</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="https://www.creative-tim.com/presentation"
-                  class="nav-link text-muted"
-                  target="_blank"
-                >About Us</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="https://www.creative-tim.com/blog"
-                  class="nav-link text-muted"
-                  target="_blank"
-                >Blog</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="https://www.creative-tim.com/license"
-                  class="nav-link pe-0 text-muted"
-                  target="_blank"
-                >License</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer> }}
   </div>
 </main>
 <div class="fixed-plugin">
@@ -631,29 +589,53 @@
 <script src="./assets/js/plugins/chartjs.min.js"></script>
 <script>
   var ctx1 = document.getElementById("chart-line").getContext("2d"); var
-  gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
+    gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
   gradientStroke1.addColorStop(1, 'rgba(94, 114, 228, 0.2)');
   gradientStroke1.addColorStop(0.2, 'rgba(94, 114, 228, 0.0)');
   gradientStroke1.addColorStop(0, 'rgba(94, 114, 228, 0)'); new Chart(ctx1, {
-  type: "line", data: { labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep",
-  "Oct", "Nov", "Dec"], datasets: [{ label: "Mobile apps", tension: 0.4,
-  borderWidth: 0, pointRadius: 0, borderColor: "#5e72e4", backgroundColor:
-  gradientStroke1, borderWidth: 3, fill: true, data: [50, 40, 300, 220, 500,
-  250, 400, 230, 500], maxBarThickness: 6 }], }, options: { responsive: true,
-  maintainAspectRatio: false, plugins: { legend: { display: false, } },
-  interaction: { intersect: false, mode: 'index', }, scales: { y: { grid: {
-  drawBorder: false, display: true, drawOnChartArea: true, drawTicks: false,
-  borderDash: [5, 5] }, ticks: { display: true, padding: 10, color: '#fbfbfb',
-  font: { size: 11, family: "Open Sans", style: 'normal', lineHeight: 2 }, } },
-  x: { grid: { drawBorder: false, display: false, drawOnChartArea: false,
-  drawTicks: false, borderDash: [5, 5] }, ticks: { display: true, color: '#ccc',
-  padding: 20, font: { size: 11, family: "Open Sans", style: 'normal',
-  lineHeight: 2 }, } }, }, }, });
+    type: "line", data: {
+      labels: ["Ene", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"], datasets: [{
+          label: "Mobile apps", tension: 0.4,
+          borderWidth: 0, pointRadius: 0, borderColor: "#5e72e4", backgroundColor:
+            gradientStroke1, borderWidth: 3, fill: true, data: [50, 40, 300, 220, 500,
+              250, 400, 230, 500, 100, 420, 300], maxBarThickness: 6
+        }],
+    }, options: {
+      responsive: true,
+      maintainAspectRatio: false, plugins: { legend: { display: false, } },
+      interaction: { intersect: false, mode: 'index', }, scales: {
+        y: {
+          grid: {
+            drawBorder: false, display: true, drawOnChartArea: true, drawTicks: false,
+            borderDash: [5, 5]
+          }, ticks: {
+            display: true, padding: 10, color: '#fbfbfb',
+            font: { size: 11, family: "Open Sans", style: 'normal', lineHeight: 2 },
+          }
+        },
+        x: {
+          grid: {
+            drawBorder: false, display: false, drawOnChartArea: false,
+            drawTicks: false, borderDash: [5, 5]
+          }, ticks: {
+            display: true, color: '#ccc',
+            padding: 20, font: {
+              size: 11, family: "Open Sans", style: 'normal',
+              lineHeight: 2
+            },
+          }
+        },
+      },
+    },
+  });
 </script>
 <script>
   var win = navigator.platform.indexOf('Win') > -1; if (win &&
-  document.querySelector('#sidenav-scrollbar')) { var options = { damping: '0.5'
-  } Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options); }
+    document.querySelector('#sidenav-scrollbar')) {
+      var options = {
+        damping: '0.5'
+      } Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
+  }
 </script>
 <!-- Github buttons -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
